# weaver

./: .gitignore  Cargo.toml  Makefile  README.md  pytest.ini  requirements.dev.txt
.cargo/: config.toml
.github/workflows/: ci-docker.yml  ci.yml  ci_docker.yml
docker/: Dockerfile.ci
helpers/: ci_macos_install.sh
tests/: Cargo.toml
tests/bench/: bench.ts  exec.sh
tests/bench/helper/: Cargo.toml
tests/bench/helper/src/: lib.rs
tests/bench/shors_impl/app/: Cargo.toml
tests/bench/shors_impl/app/src/: lib.rs
tests/bench/weaver_impl/app/: Cargo.toml
tests/bench/weaver_impl/app/src/: lib.rs
tests/integration/: conftest.py  run_tests.sh  test_endpoints.py  utils.py
tests/integration/app/: Cargo.toml
tests/integration/app/src/: lib.rs  methods.rs
tests/integration/app/src/middleware/: layer.rs  mod.rs  simple.rs
tests/src/: lib.rs
weaver/: Cargo.toml
weaver/src/: lib.rs  runtime.rs  utils.rs
weaver/src/frontend/: handler.rs  macro_impl.rs  mod.rs
weaver/src/frontend/extras/json/: mod.rs
weaver/src/frontend/handler/: macro_impl.rs  mod.rs
weaver/src/frontend/json/: mod.rs
weaver/src/frontend/middleware/: macro_impl.rs  mod.rs
weaver/src/frontend/request/: json.rs  mod.rs  path.rs
weaver/src/frontend/response/: error.rs  headers.rs  json.rs  mod.rs
weaver/src/frontend/routing/: mod.rs
weaver/src/server/: mod.rs
