[workspace]
resolver = "2"
members = [
    "weaver",
    "tests/integration/app",

    # Benchmark facilities
    "tests/bench/weaver_impl/app",
    "tests/bench/shors_impl/app",
    "tests/bench/helper",
]

[workspace.dependencies]
once_cell = "1.20.2"
tarantool = { git = "https://github.com/ftelnov/tarantool-module.git", branch = "feat/async-tcp-listener" }
tarantool-test = "0.3.2"
thiserror = "1"
weaver = { path = "weaver" }
