[package]
name = "weaver"
version = "0.0.0"
rust-version = "1.74.0"
edition = "2021"
description = "Weaver is a powerful web framework for Picodata ecosystem"
readme = "README.md"
homepage = "https://github.com/ftelnov/weaver"
repository = "https://github.com/ftelnov/weaver"
license = "BSD-2-Clause"
keywords = ["database", "http", "async", "web"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
]
authors = ["Fedor Telnov"]
include = ["src/**/*", "README.md"]

[dependencies]
hyper = { version = "1.6", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server", "http1", "http2"] }
http-body-util = "0.1"
anyhow = "1"
derive_builder = "0.20"
tarantool = { workspace = true, features = ["picodata", "test"] }
futures-io = "0.3"
pin-project-lite = "0.2"
matchit = "0.8"
thiserror = "2"
http = "1"
paste = "1"
bytes = "1"
mime = "0.3"

serde = "1"
serde_json = "1"
async-trait = "0.1"
log = { version = "0.4", features = ["kv"] }
