[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tarantool = { workspace = true, features = ["picodata", "test"] }
tarantool-test.workspace = true
weaver = { workspace = true }
async-trait = "0.1"
hyper = { version = "1.6", features = ["server", "http1", "http2"] }
http-body-util = "0.1"
anyhow = "1"

[lib]
crate-type = ["lib", "cdylib"]
