[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tarantool = { workspace = true, features = ["picodata", "test"] }
tarantool-test.workspace = true
weaver = { workspace = true }
async-trait = "0.1"
hyper = { version = "1.6", features = ["server", "http1", "http2"] }
http-body-util = "0.1"
anyhow = "1"
tarolog = "0.2"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[lib]
crate-type = ["lib", "cdylib"]
